--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-clean-css": "^3.7.0",
     "gulp-concat-css": "^2.3.0",
     "gulp-imagemin": "^3.3.0",
+    "gulp-minify": "^1.0.0",
     "gulp-sass": "^3.1.0"
   }
 }
