--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.7.0",
+    "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-minify": "^1.0.0",
